--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@paystack/inline-js": "^2.18.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paystack": "^5.0.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
