--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
     "@paystack/inline-js": "^2.18.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paystack": "^5.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^11.0.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
