--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@paystack/inline-js": "^2.18.1",
@@ -13,17 +14,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-paystack": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^11.0.0",
+    "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
